--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1,",
-    "start": "node server.js",
-    "server":"nodemon server.js"
-
+    "start": "node server.js"
+   
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "mongoose": "^7.2.3"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
     "nodemon": "^2.0.22"
   }
 }
